# FileClassifier

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  requirements_definition.md  vite.config.ts
scripts/: copy-release.mjs  generate-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: classifier.rs  commands.rs  dictionary.rs  fs_utils.rs  lib.rs  main.rs  normalize.rs  settings.rs  similarity.rs  tag.rs  types.rs
src/components/: DictionaryEditor.tsx  FolderCleanupDialog.tsx  LogViewer.tsx  MainWindow.tsx  PreviewTable.tsx
src/lib/: api.ts  types.ts
